--- a/content/research/2020-12-24-张量基础.html
+++ b/content/research/2020-12-24-张量基础.html
@@ -13,8 +13,8 @@ layout: post
 <p><strong>张量基础</strong></p>
 <p><strong>闲居</strong></p>
 <p><em>2020年12月于西财</em></p>
-<div id="基础知识" class="section level1">
-<h1>基础知识</h1>
+<div id="预备知识" class="section level1">
+<h1>预备知识</h1>
 <p>在介绍张量之前，我们先来了解一些基础知识，其中包括矩阵的运算和张量的运算操作。</p>
 <div id="几种矩阵张量运算符号和规则" class="section level2">
 <h2>几种矩阵（张量）运算符号和规则</h2>
