--- a/content/en/2021-01-15-mPPCA.html
+++ b/content/en/2021-01-15-mPPCA.html
@@ -24,7 +24,7 @@ The corresponding loglikelihood is given by
 # EM algorithm
 To deduce EM algorithm, we first calculate the posterior distribution of <span class="math inline">\((y_i, z_i)\)</span> given <span class="math inline">\(x_i\)</span> and parameters by previous iteration. Noting each <span class="math inline">\(y_{ik}\)</span> is seperatable, we consider
 <span class="math display">\[P(y_{ik}=1, z_i | x_i)=P(y_{ik}=1|x_i)P(z_i|y_{ik}=1,x_i)=R_{ik}f_{k}(z_i),\]</span>
-where <span class="math inline">\(f_k(z_i)\)</span> is the posterior distribution of <span class="math inline">\(z_i\)</span> given <span class="math inline">\(x_i\)</span> when <span class="math inline">\(y_{ik}=1\)</span>.
+where <span class="math inline">\(f_k(z_i)\)</span> is the posterior distribution of <span class="math inline">\(z_i\)</span> given <span class="math inline">\(x_i\)</span> when <span class="math inline">\(y_{ik}=1\)</span>, <span class="math inline">\(R_{ik}=P(y_{ik}=1|x_i)=a_{ki}/(\sum_k a_{ki})\)</span>, where <span class="math inline">\(a_{ki}=\pi_k |C_k|^{-1/2} \exp\{-\frac{1}{2} (x_i-\mu_k)^T C_k^{-1} (x_i -\mu_k)\}\)</span> and <span class="math inline">\(C_k= \sigma_k^2 I + W_k W_k^T\)</span>.
 By <span class="math inline">\((8)\)</span> in Bishop (1999), we have
 <span class="math display">\[f_{k}(z_i)=(2\pi)^{-q/2}|\sigma_k^2M_k|^{1/2}\exp\{(z_i-s_k(x_i)^T\sigma_k^{-2}M_k(z_i -s_k(x_i))\},\]</span>
 where <span class="math inline">\(\sigma_k^2M_k^{-1}=\sigma_k^2(\sigma^2_kI_q+W_k^TW_k)^{-1}\)</span> and <span class="math inline">\(s_k(x_i)=M_k^{-1}W_k(x_i-\mu_k)\)</span>.</p>
@@ -40,9 +40,9 @@ Denote <span class="math inline">\(h_k(z_i)=\ln(\pi_k) - \frac{p}{2} \ln(\sigma^
 Furthermore, <span class="math inline">\((1.3)\)</span> simplifies as
 <span class="math display">\[E_{(y_{ik},z_i)|x_i}(l_k)= R_{ik} \int h_k(z_i) f_{k}(z_i)dz_i. \tag{1.4}\]</span>
 <span class="math inline">\((1.4)\)</span> only involves the posterior first-order moment and second-order moment of <span class="math inline">\(z_i\)</span> that are denoted by
-<span class="math display">\[\langle z_i\rangle=M_i^{-1}W_i^T(x_i-\mu_k)\]</span>
+<span class="math display">\[\langle z_i\rangle=M_k^{-1}W_k^T(x_i-\mu_k)\]</span>
 and
-<span class="math display">\[\langle z_iz_i^T\rangle= \sigma^2_kM_i^{-1} +\langle z_i\rangle\langle z_i\rangle^T. \]</span>
+<span class="math display">\[\langle z_iz_i^T\rangle= \sigma^2_kM_k^{-1} +\langle z_i\rangle\langle z_i\rangle^T. \]</span>
 Similar to (54) in Bishop (1999), we obtain
 <span class="math display">\[E_{(y_i,z_i)|x_i}l = \sum_{k=1}^K E_{(y_{ik},z_i)|x_i}(l_k)= \sum_{k=1}^K R_{ik}\{\ln(\pi_k) - \frac{p}{2} \ln(\sigma^2_k) -\frac{1}{2}\langle z_iz_i^T\rangle - \frac{1}{2\sigma_k^2}(tr(W_k^TW_k\langle z_iz_i^T\rangle)-2(x_i-\mu_k)^TW_k \langle z_i \rangle+\|x_i-\mu_k\|^2)\}.\]</span>
 Finally, we obtain the Q-function,
@@ -51,43 +51,48 @@ where <span class="math inline">\(\langle z_i\rangle\)</span> and <span class="m
 </div>
 <div id="m-step" class="section level2">
 <h2>M-step</h2>
-<p>This step is to maximize the Q-function. Since the constraint <span class="math inline">\(\sum_{k=1}^K \pi_k=1\)</span> is required, we use Langrange method to obtain a new objective function,
-<span class="math display">\[L(\theta, \lambda;\theta^{(t)})=Q(\theta;\theta^{(t)}) + \lambda (1-\sum_{k=1}^K \pi_k).\]</span>
-1)Taking derivative on <span class="math inline">\(\pi_k, \lambda\)</span>, and setting it to zero, we obtain
+<p>This step is to maximize the Q-function. Denote <span class="math inline">\(\theta=(\pi_k, \sigma^2_k, \mu_k , W_k, k\leq K)\)</span>, all involved parameters. Since the constraint <span class="math inline">\(\sum_{k=1}^K \pi_k=1\)</span> is required, we use Langrange method to obtain a new objective function,
+<span class="math display">\[L(\theta, \lambda;\theta^{(t)})=Q(\theta;\theta^{(t)}) + \lambda (1-\sum_{k=1}^K \pi_k).\]</span></p>
+<ol style="list-style-type: decimal">
+<li><p>Taking derivative on <span class="math inline">\(\pi_k, \lambda\)</span>, and setting it to zero, we obtain
 <span class="math display">\[\frac{\partial L}{\partial \pi_k}=\sum\limits_{i=1}^n R_{ik}(\theta^{(t)}) \pi_k^{-1} - \lambda=0 \tag{2.2.1}\]</span>
 <span class="math display">\[\sum_{k=1}^K \pi_k=1 \tag{2.2.2}\]</span>
 Combining <span class="math inline">\((2.2.1)\)</span> and <span class="math inline">\((2.2.2)\)</span>, we conclude
 <span class="math display">\[\pi_k^{(t+1)} = n^{-1}\sum\limits_{i=1}^n R_{ik}(\theta^{(t)})\]</span>
-by using the fact that <span class="math inline">\(\sum\limits_{i=1}^n(\sum\limits_{k=1}^KR_{ik}(\theta^{(t)}))=n.\)</span></p>
-<ol start="2" style="list-style-type: decimal">
-<li>Taking derivative on <span class="math inline">\(\mu_k\)</span>, we have
-<span class="math display">\[\mu_k^{(t+1)}=\frac{\sum\limits_{i=1}^n R_{ik}(\theta^{(t)})\{x_i - W_k^{(t+1)}\langle z_i\rangle^{(t)}\}}{\sum\limits_{i=1}^n R_{ik}(\theta^{(t)})}\]</span></li>
-<li>Taking derivative on <span class="math inline">\(W_k\)</span>, we get
-<span class="math display">\[W^{(t+1)}\]</span></li>
+by using the fact that <span class="math inline">\(\sum\limits_{i=1}^n(\sum\limits_{k=1}^KR_{ik}(\theta^{(t)}))=n.\)</span></p></li>
+<li><p>Taking derivative on <span class="math inline">\(\mu_k\)</span>, we have
+<span class="math display">\[\mu_k^{(t+1)}=\frac{\sum\limits_{i=1}^n R_{ik}(\theta^{(t)})\{x_i - W_k^{(t+1)}\langle z_i\rangle^{(t)}\}}{\sum\limits_{i=1}^n R_{ik}(\theta^{(t)})}\]</span></p></li>
+<li><p>Taking derivative on <span class="math inline">\(W_k\)</span> and using scalar-to-Matrix derivative, we get
+<span class="math display">\[\sum\limits_{i=1}^n [R_{ik}(\theta^{(t)}) \{ \langle z_i\rangle (x_i -\mu_k)^T - \langle z_i z_i^T\rangle W_k^T\}]=0\]</span>
+which leads to
+<span class="math display">\[W_k^{(t+1)}=\sum\limits_{i=1}^n [R_{ik}(\theta^{(t)})(x_i -\mu_k^{(t+1)})\langle z_i\rangle^T] [\sum\limits_{i=1}^n [R_{ik}(\theta^{(t)})\langle z_i z_i^T\rangle]^{-1}. \tag{2.2.3}\]</span></p></li>
+<li><p>Denote <span class="math inline">\(s_{ik}(W_k, \mu_k)=tr(W_k^TW_k\langle z_iz_i^T\rangle)-2(x_i-\mu_k)^TW_k \langle z_i \rangle+\|x_i-\mu_k\|^2\)</span>. Taking derivative on <span class="math inline">\(\sigma^2_i\)</span>, we get
+<span class="math display">\[\sigma_k^{2,(t+1)}= \frac{\sum\limits_{i=1}^n R_{ik}(\theta^{(t)}) s_{ik}(W_k^{(t+1)}, \mu_k^{(t+1)})}{p\sum\limits_{i=1}^n R_{ik}(\theta^{(t)})}. \tag{2.2.4}\]</span></p></li>
 </ol>
 </div>
-<div id="common-used-matrixvector-derivative-formula" class="section level2">
-<h2>Common-used matrix(vector) derivative formula</h2>
-<p>It is claimed that a vector is layouted in column vector form as default.</p>
-<p>1)It is worthwhile to note that <span class="math inline">\(y=F(w), y\in R, w\in R^q\)</span>, then
-<span class="math display">\[\frac{\partial y}{\partial w}= (\frac{\partial y}{\partial w_1}, \cdots, \frac{\partial y}{\partial w_q}) \in R^{1\times q}.\]</span></p>
-<p>2)A scalar making derivative on a column vector produces a row vector. But a column vector funciton making derivative on a scalar produces a column vector, e.g. 
-<span class="math display">\[\frac{\partial w}{\partial y}= (\frac{\partial w_1}{\partial y}, \cdots, \frac{\partial w_q}{\partial y})^T \in R^{q \times 1}.\]</span></p>
-<ol start="3" style="list-style-type: decimal">
-<li><p>The derivative of a vector function (a vector whose components are functions) <span class="math inline">\(y\in R^p\)</span> with respect to an input vector <span class="math inline">\(x\in R^q\)</span> is written (in numerator layout notation) as
-<span class="math display">\[\frac{\partial y}{\partial x}=[\frac{\partial y_1}{\partial x_1}, \cdots, \frac{\partial w_p}{\partial x_1}; \cdots; \frac{\partial y_1}{\partial x_q}, \cdots, \frac{\partial y_q}{\partial x_q}]^T \in R^{p\times q},\]</span>
-whose each column is <span class="math inline">\(\frac{\partial y}{\partial x_j} \in R^{p \times 1}\)</span>,where the notation mimics the matrix in Matlab.</p></li>
-<li><p>The derivative of a scalar function <span class="math inline">\(y\in R\)</span> w.r.t. an matrix <span class="math inline">\(X\in R^{p\times q}\)</span> is written as
-<span class="math display">\[\frac{\partial y}{\partial X}=[\frac{\partial y}{\partial x_{11}}, \cdots, \frac{\partial y}{\partial x_{p1}}; \cdots; \frac{\partial y}{\partial x_{1q}}, \cdots, \frac{\partial y}{\partial x_{pq}}] \in R^{q\times p}\]</span></p></li>
-<li><p>The derivative of a matrix function <span class="math inline">\(Y\in R^{p\times q}\)</span> w.r.t. an matrix <span class="math inline">\(x\in R\)</span> is known as tangent matrix, and written as
-<span class="math display">\[\frac{\partial Y}{\partial x}=[\frac{\partial y_{11}}{\partial x}, \cdots, \frac{\partial x_{p1}}{\partial x}; \cdots; \frac{\partial x_{1q}}{\partial x}, \cdots, \frac{\partial y_{pq}}{\partial x}] \in R^{q\times p}\]</span></p></li>
-</ol>
-<p>In a word, the size of a derivative is dimension of dependent variables times that of transpose of independent variables, i.e., dim(dy/dx)=dim(dim(y) dim(x^T)). For example, <span class="math inline">\(y\in R, X\in R^{p\times q}\)</span>, then <span class="math inline">\(dim(dy/dX)= dim(1\times (q\times p))=q\times p\)</span>.</p>
-<ol style="list-style-type: decimal">
-<li>Scalar-to-Matrix derivative: let <span class="math inline">\(W\in R^{p\times q}\)</span></li>
-</ol>
-<p>F(W)=tr(W): <span class="math inline">\(\frac{\partial F}{\partial W}= I_q ~if~ p=q\)</span>;</p>
-<p>F(W)= a^TWb: <span class="math inline">\(\frac{\partial F}{\partial W}= b a^T\)</span>;</p>
-<p>F(W)= a<sup>TW</sup>Tb: <span class="math inline">\(\frac{\partial F}{\partial W}= a b^T\)</span>;</p>
+<div id="two-stage-em-procedure" class="section level2">
+<h2>Two-stage EM procedure</h2>
+<p>Note that M-step equations for <span class="math inline">\(\mu_i\)</span> and <span class="math inline">\(W_i\)</span> are coupled, so further manipulation is required to obtain explicit solutions.</p>
+<p>The likelihood function we wish to maximize is given by
+<span class="math display">\[L(\theta) =\sum\limits_{i=1}^n \ln \big\{\sum\limits_{k=1}^K \pi_k p(x_i|y_{ik}=1)\big\}.\]</span>
+Now, we introduce labels <span class="math inline">\(y_{i}\)</span> as missing data, and ignore the presence of the latent <span class="math inline">\(z_i\)</span>. Here, <span class="math inline">\(z_i\)</span> is integrated, so only <span class="math inline">\(y_i\)</span> is missing data. Then the “full” loglikelihood is
+<span class="math display">\[L(\theta; x,y)=\sum\limits_{i=1}^n \sum\limits_{k=1}^K y_{ik}\ln \big\{ \pi_k p(x_i|y_{ik}=1)\big\}.\]</span>
+Based on this full log likelihood, we will construct EM algorithm.
+Thus, the expected complete-data log likelihood is given by
+<span class="math display">\[\hat L= \sum\limits_{i=1}^n \sum\limits_{k=1}^K R_{ik}\ln \big\{ \pi_k p(x_i|y_{ik}=1)\big\}, \tag{2.3.1}\]</span>
+from which we get the updation of <span class="math inline">\(\pi_k^{(t+1)}\)</span> and <span class="math inline">\(\mu_k^{(t+1)}\)</span>:
+<span class="math display">\[\pi_k^{(t+1)}=n^{-1}\sum\limits_{i=1}^n R_{ik}(\theta^{(t)})\]</span>
+<span class="math display">\[\mu_k^{(t+1)}=\frac{\sum\limits_{i=1}^n R_{ik}(\theta^{(t)})x_i}{\sum\limits_{i=1}^n R_{ik}(\theta^{(t)})}.\]</span>
+However, we don’t solve <span class="math inline">\(\sigma_k^2\)</span> and <span class="math inline">\(W_k\)</span> from <span class="math inline">\((2.3.1)\)</span>, because there is no closed-form in it. Actually, we only need to find <span class="math inline">\(\sigma_k^{2,(t+1)}\)</span> and <span class="math inline">\(W_k^{(t+1)}\)</span> increasing <span class="math inline">\(\hat L(\theta)\)</span>.
+<span class="math inline">\((2.2.3)\)</span> and <span class="math inline">\((2.2.4)\)</span> based on <span class="math inline">\(L(\theta, \lambda;\theta^{(t)})\)</span> regarding <span class="math inline">\(z_i\)</span> and <span class="math inline">\(y_i\)</span> as missing data provide the iterative value such that condition.</p>
+<p>We update <span class="math inline">\(W_k\)</span> by
+<span class="math display">\[W_k^{(t+1)}=\sum\limits_{i=1}^n [R_{ik}(\theta^{(t)})(x_i -\mu_k^{(t+1)})\langle z_i\rangle^T] [\sum\limits_{i=1}^n [R_{ik}(\theta^{(t)})\langle z_i z_i^T\rangle]^{-1}.\]</span>
+and update <span class="math inline">\(\sigma^2_k\)</span> by
+<span class="math display">\[\sigma_k^{2,(t+1)}= \frac{\sum\limits_{i=1}^n R_{ik}(\theta^{(t)}) s_{ik}(W_k^{(t+1)}, \mu_k^{(t+1)})}{p\sum\limits_{i=1}^n R_{ik}(\theta^{(t)})}.\]</span>
+So far, each parameter has a iterative closed-form solution.</p>
 </div>
+</div>
+<div id="generalized-em-algorithm" class="section level1">
+<h1>Generalized EM algorithm</h1>
+<p><a href="https://zhuanlan.zhihu.com/p/150342963" class="uri">https://zhuanlan.zhihu.com/p/150342963</a></p>
 </div>
