--- a/content/research/2020-12-27-Formula.html
+++ b/content/research/2020-12-27-Formula.html
@@ -58,3 +58,44 @@ vec(A∗B)=vec(A)∗vec(B)</p>
 <p>2)Inner product（内积）：<span class="math inline">\(A, B \in R^{n \times m}\)</span>，
 <span class="math display">\[\langle A, B\rangle = tr(A^TB)=vec(A)^T vec(B)=vec(B^T)^T vec(A)\]</span></p>
 </div>
+<div id="common-used-matrixvector-derivative-formula" class="section level2">
+<h2>Common-used matrix(vector) derivative formula</h2>
+<p>As mentioned above, there are two common-used laying-out systems of partial derivatives in vectors and matrices, and no standard appears to be emerging yet. In general, the numerator layout convention is often for the purposes of convenience.
+It is claimed that a vector is layouted in column vector form as default.</p>
+<ol style="list-style-type: decimal">
+<li><p>It is worthwhile to note that <span class="math inline">\(y=F(w), y\in R, w\in R^q\)</span>, then
+<span class="math display">\[\frac{\partial y}{\partial w}= (\frac{\partial y}{\partial w_1}, \cdots, \frac{\partial y}{\partial w_q}) \in R^{1\times q}.\]</span></p></li>
+<li><p>A scalar making derivative on a column vector produces a row vector. But a column vector funciton making derivative on a scalar produces a column vector, e.g. 
+<span class="math display">\[\frac{\partial w}{\partial y}= (\frac{\partial w_1}{\partial y}, \cdots, \frac{\partial w_q}{\partial y})^T \in R^{q \times 1}.\]</span></p></li>
+<li><p>The derivative of a vector function (a vector whose components are functions) <span class="math inline">\(y\in R^p\)</span> with respect to an input vector <span class="math inline">\(x\in R^q\)</span> is written (in numerator layout notation) as
+<span class="math display">\[\frac{\partial y}{\partial x}=[\frac{\partial y_1}{\partial x_1}, \cdots, \frac{\partial w_p}{\partial x_1}; \cdots; \frac{\partial y_1}{\partial x_q}, \cdots, \frac{\partial y_q}{\partial x_q}]^T \in R^{p\times q},\]</span>
+whose each column is <span class="math inline">\(\frac{\partial y}{\partial x_j} \in R^{p \times 1}\)</span>,where the notation mimics the matrix in Matlab.</p></li>
+<li><p>The derivative of a scalar function <span class="math inline">\(y\in R\)</span> w.r.t. an matrix <span class="math inline">\(X\in R^{p\times q}\)</span> is written as
+<span class="math display">\[\frac{\partial y}{\partial X}=[\frac{\partial y}{\partial x_{11}}, \cdots, \frac{\partial y}{\partial x_{p1}}; \cdots; \frac{\partial y}{\partial x_{1q}}, \cdots, \frac{\partial y}{\partial x_{pq}}] \in R^{q\times p}\]</span></p></li>
+<li><p>The derivative of a matrix function <span class="math inline">\(Y\in R^{p\times q}\)</span> w.r.t. a scalar <span class="math inline">\(x\in R\)</span> is known as tangent matrix, and written as
+<span class="math display">\[\frac{\partial Y}{\partial x}=[\frac{\partial y_{11}}{\partial x}, \cdots, \frac{\partial y_{1q}}{\partial x}; \cdots; \frac{\partial y_{p1}}{\partial x}, \cdots, \frac{\partial y_{pq}}{\partial x}] \in R^{p\times q}\]</span></p></li>
+</ol>
+<p>In a word, the size of a derivative is dimension of dependent variables times that of transpose of independent variables, i.e., dim(dy/dx)=dim(dim(y) dim(x^T)). For example, <span class="math inline">\(y\in R, X\in R^{p\times q}\)</span>, then <span class="math inline">\(dim(dy/dX)= dim(1\times (q\times p))=q\times p\)</span>.</p>
+<p>(1)Scalar-to-Matrix derivative: let <span class="math inline">\(W\in R^{p\times q}\)</span></p>
+<ol style="list-style-type: decimal">
+<li><p><span class="math inline">\(F(W)= a^TWb: \frac{\partial F}{\partial W}= b a^T\)</span>;</p></li>
+<li><p><span class="math inline">\(F(W)= a^TW^Tb: \frac{\partial F}{\partial W}= a b^T\)</span>;</p></li>
+<li><p><span class="math inline">\(F(W)=a(W)b(W):\frac{\partial F}{\partial W}=a(W)\frac{\partial b(W)}{\partial W}+ b(W)\frac{\partial a(W)}{\partial W}\)</span>;</p></li>
+<li><p>Trace funtion is only welll-defined for square matrix, so if <span class="math inline">\(p=q\)</span>,
+<span class="math inline">\(F(W)=tr(W): \frac{\partial F}{\partial W}= I_q\)</span>;</p></li>
+<li><p><span class="math inline">\(F(W)=tr(U(W)+ V(W)): \frac{\partial F}{\partial W}= \frac{\partial tr(U)}{\partial W}+\frac{\partial tr(V)}{\partial W}\)</span>;</p></li>
+<li><p><span class="math inline">\(F(W)=tr(AW)=tr(WA): \frac{\partial F}{\partial W}= A\)</span>;</p></li>
+<li><p><span class="math inline">\(F(W)=tr(AW^T)=tr(W^TA): \frac{\partial F}{\partial W}= A^T\)</span>;</p></li>
+<li><p><span class="math inline">\(F(W)=tr(W^TAW): \frac{\partial F}{\partial W}= W^T(A+A^T)\)</span>;
+I found that we can use the LRD(Left and Right) Derivative method to obtain the result, i.e. <span class="math inline">\(\frac{\partial tr(W^TAW)}{\partial W}= \frac{\partial tr((W^TA)W)}{\partial W}+ \frac{\partial tr(W^T(AW))}{\partial W}=W^TA + W^T A^T\)</span>, where <span class="math inline">\((\cdot)\)</span> is regard as constant.</p></li>
+<li><p><span class="math inline">\(F(W)=tr(W^{-1}A): \frac{\partial F}{\partial W}= -W^{-1}AW^{-1}\)</span>;</p></li>
+<li><p><span class="math inline">\(F(W)=tr(AWB)=tr(WBA): \frac{\partial F}{\partial W}= BA\)</span>;</p></li>
+<li><p><span class="math inline">\(F(W)=tr(AWBW^TC)=tr(CAWBW^T): \frac{\partial F}{\partial W}= (CAWB)^T+ BW^TCA\)</span>; This can be obtained by LRD method.</p></li>
+<li><p><span class="math inline">\(F(W)=|W|: \frac{\partial F}{\partial W}= |W|W^{-1}\)</span>;</p></li>
+<li><p><span class="math inline">\(F(W)=\ln(a|W|): \frac{\partial F}{\partial W}= W^{-1}\)</span>;</p></li>
+<li><p><span class="math inline">\(F(W)=\|Wa +b\|^2: \frac{\partial F}{\partial W}= 2a (Xa+b)^T\)</span>;</p></li>
+<li><p><span class="math inline">\(F(W)=(Wa)^T C W b: \frac{\partial F}{\partial W}= ab^TX^TC^T + b a^T X^TC\)</span>; This can be otained by 1), 2) and LRD method.</p></li>
+</ol>
+<p>I conclude 1) the Layout-Match (LM) method: <span class="math inline">\(nrow(\frac{\partial F}{\partial W})=ncol(W)\)</span> to check the correction of dimension of results; 2) LRD method can help to deduce the derivative of multiplication terms.</p>
+<p>See <a href="https://en.wikipedia.org/wiki/Matrix_calculus#Derivatives_with_vectors" class="uri">https://en.wikipedia.org/wiki/Matrix_calculus#Derivatives_with_vectors</a> for More information.</p>
+</div>
