--- a/content/en/2021-01-15-mPPCA.html
+++ b/content/en/2021-01-15-mPPCA.html
@@ -22,6 +22,7 @@ where
 The corresponding loglikelihood is given by
 <span class="math display">\[l=\sum_{k=1}^K y_{ik} \{\ln(\pi_k) + \ln f_{ki} + \ln g_i\} \tag{1.2}\]</span>
 # EM algorithm
+The essential objective of EM algorithm is to maximize the observation likelihood.
 To deduce EM algorithm, we first calculate the posterior distribution of <span class="math inline">\((y_i, z_i)\)</span> given <span class="math inline">\(x_i\)</span> and parameters by previous iteration. Noting each <span class="math inline">\(y_{ik}\)</span> is seperatable, we consider
 <span class="math display">\[P(y_{ik}=1, z_i | x_i)=P(y_{ik}=1|x_i)P(z_i|y_{ik}=1,x_i)=R_{ik}f_{k}(z_i),\]</span>
 where <span class="math inline">\(f_k(z_i)\)</span> is the posterior distribution of <span class="math inline">\(z_i\)</span> given <span class="math inline">\(x_i\)</span> when <span class="math inline">\(y_{ik}=1\)</span>, <span class="math inline">\(R_{ik}=P(y_{ik}=1|x_i)=a_{ki}/(\sum_k a_{ki})\)</span>, where <span class="math inline">\(a_{ki}=\pi_k |C_k|^{-1/2} \exp\{-\frac{1}{2} (x_i-\mu_k)^T C_k^{-1} (x_i -\mu_k)\}\)</span> and <span class="math inline">\(C_k= \sigma_k^2 I + W_k W_k^T\)</span>.
@@ -46,7 +47,7 @@ and
 Similar to (54) in Bishop (1999), we obtain
 <span class="math display">\[E_{(y_i,z_i)|x_i}l = \sum_{k=1}^K E_{(y_{ik},z_i)|x_i}(l_k)= \sum_{k=1}^K R_{ik}\{\ln(\pi_k) - \frac{p}{2} \ln(\sigma^2_k) -\frac{1}{2}\langle z_iz_i^T\rangle - \frac{1}{2\sigma_k^2}(tr(W_k^TW_k\langle z_iz_i^T\rangle)-2(x_i-\mu_k)^TW_k \langle z_i \rangle+\|x_i-\mu_k\|^2)\}.\]</span>
 Finally, we obtain the Q-function,
-<span class="math display">\[Q(\theta;\theta^{(t)})=\sum\limits_{i=1}^n\sum\limits_{k=1}^KR_{ik}(\theta^{(t)})\{\ln(\pi_k) - \frac{p}{2} \ln(\sigma^2_k) -\frac{1}{2}\langle z_iz_i^T\rangle - \frac{1}{2\sigma_k^2}(tr(W_k^TW_k\langle z_iz_i^T\rangle)-2(x_i-\mu_k)^TW_k \langle z_i \rangle+\|x_i-\mu_k\|^2)\},\]</span>
+<span class="math display">\[Q(\theta;\theta^{(t)})=\sum\limits_{i=1}^n\sum\limits_{k=1}^KR_{ik}(\theta^{(t)})\{\ln(\pi_k) - \frac{p}{2} \ln(\sigma^2_k) -\frac{1}{2}tr(\langle z_iz_i^T\rangle) - \frac{1}{2\sigma_k^2}(tr(W_k^TW_k\langle z_iz_i^T\rangle)-2(x_i-\mu_k)^TW_k \langle z_i \rangle+\|x_i-\mu_k\|^2)\},\]</span>
 where <span class="math inline">\(\langle z_i\rangle\)</span> and <span class="math inline">\(\langle z_iz_i^T\rangle\)</span> also include <span class="math inline">\(\theta^{(t)}\)</span>.</p>
 </div>
 <div id="m-step" class="section level2">
@@ -91,8 +92,62 @@ and update <span class="math inline">\(\sigma^2_k\)</span> by
 <span class="math display">\[\sigma_k^{2,(t+1)}= \frac{\sum\limits_{i=1}^n R_{ik}(\theta^{(t)}) s_{ik}(W_k^{(t+1)}, \mu_k^{(t+1)})}{p\sum\limits_{i=1}^n R_{ik}(\theta^{(t)})}.\]</span>
 So far, each parameter has a iterative closed-form solution.</p>
 </div>
+<div id="convergence-check" class="section level2">
+<h2>Convergence check</h2>
+<p>Since EM algorithm is a subclass of MM algorithm, by the principle of MM algorithm we can check the convergence by the fact that
+<span class="math display">\[Q(\theta; \theta^{(t)})\leq L(\theta) ~~ for all~~ \theta\]</span>
+and
+<span class="math display">\[Q(\theta; \theta^{(t)})= L(\theta) ~if~~and ~only~if~ \theta=  \theta^{(t)}.\]</span>
+Thus, we have
+<span class="math display">\[L(\theta^{(t)})=Q(\theta^{(t)}; \theta^{(t)})\leq Q(\theta^{(t+1)}; \theta^{(t)})\leq L(\theta^{(t+1)}). \tag{2.4.1}\]</span>
+Recursively, we have
+<span class="math display">\[Q(\theta^{(t+1)}; \theta^{(t)}) \leq Q(\theta^{(t+2)}; \theta^{(t+1)}). \tag{2.4.2}\]</span>
+Thus, there are two methods to check the convergence (correction of programming) of algorithm from the aspect of the objective function.</p>
+<ol style="list-style-type: decimal">
+<li><p>By <span class="math inline">\((2.4.1)\)</span>, we can check whether the value of the observed loglikelihood function is nondecreasing.</p></li>
+<li><p>By <span class="math inline">\((2.4.2)\)</span>, we can check whether the value of the Q-function is nondecreasing.</p></li>
+</ol>
+</div>
 </div>
 <div id="generalized-em-algorithm" class="section level1">
 <h1>Generalized EM algorithm</h1>
-<p><a href="https://zhuanlan.zhihu.com/p/150342963" class="uri">https://zhuanlan.zhihu.com/p/150342963</a></p>
+<p>We learn the generalized EM algorithm in this section. Assume <span class="math inline">\(\{y_i,i\leq n\}\)</span> is the observed data, <span class="math inline">\(\{z_i,i\leq n\}\)</span> the latent variable, and we are interested in parameter <span class="math inline">\(\theta\)</span>.</p>
+<p>Following the principle of EM algorithm, the complete-data log likelihood is given by
+<span class="math display">\[l(\theta; Y,Z)=\sum_i \ln (P(y_i,z_i; \theta)).\]</span>
+Next, according the posterior distribution of <span class="math inline">\(z_i\)</span> given <span class="math inline">\(y_i\)</span>, <span class="math inline">\(P(z_i|y_i;\theta)\)</span>, we take conditional expectation on <span class="math inline">\(z_i\)</span> for <span class="math inline">\(l(\theta;Y,Z)\)</span> to obtain Q function. However, it is often difficult to
+calculate <span class="math inline">\(P(z_i|y_i;\theta)\)</span> in practice, which leads to that EM algorithm fails. In this backgroud, GEM is developed to solve this problem.</p>
+<p>First, we inspect the another derivation of EM algorithm,
+<span class="math display">\[\ln P(Y;\theta)=\ln P(Y,Z;\theta)-\ln P(Z|Y;\theta)=\ln \frac{P(Y,Z;\theta)}{q(Z)} - \ln \frac{P(Z|Y;\theta)}{q(Z)}, \tag{3.1}\]</span>
+where <span class="math inline">\(q(Z)\)</span> is the density function of <span class="math inline">\(Z\)</span> and is a unknown function to be optimized.
+Taking expectation with respect to <span class="math inline">\(Z\)</span> on both sides of <span class="math inline">\((3.1)\)</span>, we have
+<span class="math display">\[\ln P(Y;\theta)=\sum_zq(z)\ln \frac{P(Y,z;\theta)}{q(z)}-\sum_zq(z)\ln \frac{P(z|Y;\theta)}{q(z)},\]</span>
+where the first term is called evidence lower bound (ELBO), and the second term is KL divergence of <span class="math inline">\(P(Z|Y,\theta)\)</span> and <span class="math inline">\(q(Z)\)</span>. That is
+<span class="math display">\[ELBO = \sum_zq(z)\ln \frac{P(Y,z;\theta)}{q(z)}\]</span>
+and
+<span class="math display">\[KL(q(Z)\|P(Z|Y,\theta))=\sum_zq(z)\ln \frac{P(z|Y;\theta)}{q(z)}.\]</span>
+Thus, we obtain
+<span class="math display">\[\ln P(Y;\theta) = ELBO + KL(q(Z)\|P(Z|Y,\theta)). \tag{3.2}\]</span>
+Recalling EM algorithm, paramter <span class="math inline">\(\theta\)</span> is fixed at E-step, so <span class="math inline">\(\ln P(Y;\theta)\)</span> is constant here. Thus, the optimized solution of <span class="math inline">\(q(z)\)</span> is equal to <span class="math inline">\(P(z|y;\theta)\)</span> as much as possible. By this way, the E-step of GEM turns to
+<span class="math display">\[\arg\max_{q(z)}ELBO\]</span>
+due to
+<span class="math display">\[\arg\min_{q(z)}KL(q(z)\|P(z|Y=y,\theta)) \Leftrightarrow \arg\max_{q(z)}ELBO\]</span>
+by the fact that <span class="math inline">\(KL(q(Z)\|P(Z|Y,\theta))=\ln P(Y;\theta) - ELBO\)</span>.</p>
+<p>And the M-step of GEM is
+<span class="math display">\[\theta = \arg\max_\theta ELBO(\theta).\]</span>
+In summary, GEM algorithm is given by
+<span class="math display">\[E-step:~~ q(z)^{(t+1)}=\arg\max_{q(z)} \sum_zq(z)\ln \frac{P(Y,z;\theta^{(t)})}{q(z)}; \tag{3.3}\]</span>
+<span class="math display">\[M-step:~~\theta^{(t+1)}=\arg\max_\theta \sum_zq(z)^{(t+1)}\ln \frac{P(Y,z;\theta^{(t)})}{q(z)^{(t+1)}}. \tag{3.4}\]</span>
+Given inital value <span class="math inline">\(\theta^{(0)}\)</span>, then repeat <span class="math inline">\((3.3)\)</span> and <span class="math inline">\((3.4)\)</span> until convergence. Actually, GEM algorithm belongs to the class of coordinate ascent algortihm, that is, EBLO is a bivariant function on <span class="math inline">\(q(z)\)</span> and <span class="math inline">\(\theta\)</span>; first, we optimize <span class="math inline">\(q(z)\)</span> given <span class="math inline">\(\theta\)</span>; then we optimize <span class="math inline">\(\theta\)</span> given <span class="math inline">\(q(z)\)</span>.</p>
+<pre class="rmd"><code>Remark 1: q(z) is also a parameter joining in iteration.
+Remark 2: GEM does not involve computing P(z|y;\theta).
+Remark 3: In practice, we assume a parametric form for q(z) to approximate P(z|Y;\theta), 
+          then optimize the parameter in iteration, which is called
+          variational Bayesian EM algorithm.</code></pre>
+<p>See <a href="https://mbernste.github.io/posts/elbo/" class="uri">https://mbernste.github.io/posts/elbo/</a> for more details about GEM and ELBO. Why ELBO is called evidence lower bound? Since, given <span class="math inline">\(\theta\)</span>, <span class="math inline">\(\ln P(Y;\theta)\)</span> is called evidence, which indicates the evidence of model fitting data by taking <span class="math inline">\(\theta\)</span>. By Jensen inequality, we have <span class="math inline">\(\ln P(Y;\theta) \geq ELBO\)</span>, a lower bound of envidence, so ELBO is called envidence lower bound.</p>
+<pre class="rmd"><code>References:
+  https://mbernste.github.io/posts/elbo/
+  https://zhuanlan.zhihu.com/p/150342963
+  Shi X, Jiao Y, Yang Y, Cheng CY, Yang C, Lin X, Liu J. VIMCO: variational inference for multiple correlated outcomes in genome-wide
+association studies. Bioinformatics. 2019 Oct 1;35(19):3693-3700. doi: 10.1093/bioinformatics/btz167. PMID: 30851102.
+  Tipping, M. E., &amp; Bishop, C. M. (1999). Mixtures of probabilistic principal component analyzers. Neural computation , 11 (2), 443-482.</code></pre>
 </div>
