upload some VPN links

--- a/content/cn/更换主题.html
+++ b/content/cn/更换主题.html
@@ -10,6 +10,11 @@ layout: post
 <script src="/rmarkdown-libs/anchor-sections/anchor-sections.js"></script>
 
 
+<div id="常用vpn" class="section level2">
+<h2>常用VPN</h2>
+<p>网驰VPN： <a href="http://wch.bkwlk.cn/?c=3038" class="uri">http://wch.bkwlk.cn/?c=3038</a></p>
+<p>佛跳墙VPN： <a href="https://www.haoxixin.com/ncn/?a=fr" class="uri">https://www.haoxixin.com/ncn/?a=fr</a></p>
+</div>
 <div id="琳琅满目的主题" class="section level2">
 <h2>琳琅满目的主题</h2>
 <p>选择合适自己风格的主题，请参照：
