--- a/content/en/summary_discussion_problems.html
+++ b/content/en/summary_discussion_problems.html
@@ -19,6 +19,16 @@ output: pdf_document
 <li><p>Plot the estimates of latent variables <span class="math inline">\(z\)</span>.</p></li>
 <li><p>Learn the method of data preprocessing and Yang Yi Shixiong can provide somde demo codes and real data.</p></li>
 <li><p>Read some papers about the area of Single-cell.</p></li>
-<li><p>Think about adding the Hidden Gaussian Markov fields into model, then use ICM algorithm to implement it.</p></li>
+<li><p>Think about adding the Hidden Gaussian Markov fields into model, then use ICM algorithm to implement it.s</p></li>
+<li><p>Read the book about Gaussian Process.</p></li>
+</ol>
+</div>
+<div id="summary-2021-02-05" class="section level1">
+<h1>Summary, 2021-02-05</h1>
+<p>The aims or problmes are as follows:</p>
+<ol style="list-style-type: decimal">
+<li><p>Check the computation complexity, i.e. the relationship between computing time and <span class="math inline">\(n,p,K\)</span> and <span class="math inline">\(q\)</span>.</p></li>
+<li><p>Increase <span class="math inline">\(n\)</span> and <span class="math inline">\(p\)</span>, such as <span class="math inline">\(n=4000,5000\)</span> and <span class="math inline">\(p=2000\)</span>.</p></li>
+<li><p>Look up to the settting of signal-noise ratio.</p></li>
 </ol>
 </div>
