--- a/content/cn/R与Cpp混合编程.html
+++ b/content/cn/R与Cpp混合编程.html
@@ -14,6 +14,12 @@ output: pdf_document
 <p>要正确编译cpp文件，R的安装路径不能有空格，否则会报错如下：</p>
 <pre class="rmd"><code>Error in system(cmd, intern = !showOutput) : &#39;C:/Program&#39; not found</code></pre>
 </div>
+<div id="易犯错误" class="section level1">
+<h1>易犯错误</h1>
+<ol style="list-style-type: decimal">
+<li>最大值最小值溢出，C++中最小值。非常接近0的溢出为0。比如<span class="math inline">\(4^{-200}*A %( 2* 4^{-200}*B)\)</span>，对于这种就需要先把<span class="math inline">\(4^{-200}\)</span>约掉后再计算两个矩阵的逐元除法。</li>
+</ol>
+</div>
 <div id="头文件的意义" class="section level1">
 <h1>头文件的意义</h1>
 <p>Cpp中有两类文件，一个是cpp源文件.cpp为扩展名，用于写源代码，包括变量和函数定义；一个是头文件.h为扩展名，用于申明变量和函数，不能包含变量和函数的定义。 只能在头文件中写形如：extern int a;和void f();的句子。这些才是声明。如果写上int a;或者void f() {}这样的句子，那么一旦这个头文件被两个或两个以上的.cpp文件包含的话，编译器会立马报错。 “extern int a;”表示申明一个已定义的变量；“void f();”表示申明一个已定义的无返回值的函数f。
