add linux learning

--- a/content/en/2021-01-15-mPPCA.html
+++ b/content/en/2021-01-15-mPPCA.html
@@ -2,7 +2,11 @@
 title: 'EM algorithm: an exmaple with mixture probabilistic PCA'
 author: "Wei Liu"
 date: '2021-01-15'
-output: pdf_document
+output: 
+ pdf_document:
+   includes:
+      in_header: clemson-beamer-header-simple.txt
+      before_body: table-of-contents.txt
 ---
 
 <link href="/rmarkdown-libs/anchor-sections/anchor-sections.css" rel="stylesheet" />
