--- a/content/cn/LinuxLearn.html
+++ b/content/cn/LinuxLearn.html
@@ -9,6 +9,14 @@ output: pdf_document
 <script src="/rmarkdown-libs/anchor-sections/anchor-sections.js"></script>
 
 
+<div id="账户" class="section level2">
+<h2>账户</h2>
+<p>账户信息</p>
+<pre class="linux"><code>GPU:
+ssh weiliudeng@172.25.136.22
+Ldw-258174718
+</code></pre>
+</div>
 <div id="基本命令" class="section level2">
 <h2>基本命令</h2>
 <pre class="linux"><code>可用命令： 
@@ -44,7 +52,8 @@ cd .. # 返回上一级命令
 </div>
 <div id="文件操作命令" class="section level2">
 <h2>文件操作命令</h2>
-<pre class="linux"><code>cp -options A B    将文件（夹）A复制为文件（夹）B。
+<pre class="linux"><code>stat A.txt    查看文件的创建日期等详细信息
+cp -options A B    将文件（夹）A复制为文件（夹）B。
 tar -xzvf  XX.tar.gz      解压压缩文件
 从指定网址下载文件：
 wget -O spaceranger-1.2.2.tar.gz &quot;https://cf.10xgenomics.com/releases/spatial-exp/spaceranger-1.2.2.tar.gz&quot; 
@@ -111,4 +120,47 @@ kill 46747</code></pre>
 <h2>sed命令示例</h2>
 <p>见网址：
 <a href="https://www.cnblogs.com/feixiangmanon/p/12043757.html" class="uri">https://www.cnblogs.com/feixiangmanon/p/12043757.html</a></p>
+</div>
+<div id="vivim编辑器的使用" class="section level2">
+<h2>vi/vim编辑器的使用</h2>
+<ol style="list-style-type: decimal">
+<li>打开文件、保存、关闭文件(vi命令模式下使用)</li>
+</ol>
+<pre class="linux"><code>vi filename       //打开filename文件
+:w       //保存文件
+:w vpser.net //保存至vpser.net文件
+:q          //退出编辑器，如果文件已修改请使用下面的命令
+:q!        //退出编辑器，且不保存
+:wq         //退出编辑器，且保存文件</code></pre>
+<ol start="2" style="list-style-type: decimal">
+<li>插入文本或行(vi命令模式下使用，执行下面命令后将进入插入模式，按ESC键可退出插入模式)</li>
+</ol>
+<pre class="linux"><code>a      //在当前光标位置的右边添加文本
+i       //在当前光标位置的左边添加文本
+A     //在当前行的末尾位置添加文本
+I      //在当前行的开始处添加文本(非空字符的行首)
+O     //在当前行的上面新建一行
+o     //在当前行的下面新建一行
+R    //替换(覆盖)当前光标位置及后面的若干文本
+J    //合并光标所在行及下一行为一行(依然在命令模式)</code></pre>
+<ol start="3" style="list-style-type: decimal">
+<li>移动光标(vi命令模式下使用)</li>
+</ol>
+<pre class="linux"><code>1、使用上下左右方向键
+
+2、命令模式下：h   向左、j   向下 、k   向上、l  向右。
+空格键 向右、Backspace  向左、Enter  移动到下一行首、-  移动到上一行首。</code></pre>
+<ol start="4" style="list-style-type: decimal">
+<li>删除、恢复字符或行(vi命令模式下使用)</li>
+</ol>
+<pre class="linux"><code>x         //删除当前字符
+nx         //删除从光标开始的n个字符
+dd      //删除当前行
+ndd   //向下删除当前行在内的n行
+u       //撤销上一步操作
+U      //撤销对当前行的所有操作
+/vpser     //向光标下搜索vpser字符串
+?vpser     //向光标上搜索vpser字符串
+n           //向下搜索前一个搜素动作
+N         //向上搜索前一个搜索动作</code></pre>
 </div>
