add reading books

--- a/content/en/2021-01-15-mPPCA.html
+++ b/content/en/2021-01-15-mPPCA.html
@@ -2,11 +2,6 @@
 title: 'EM algorithm: an exmaple with mixture probabilistic PCA'
 author: "Wei Liu"
 date: '2021-01-15'
-output: 
- pdf_document:
-   includes:
-      in_header: clemson-beamer-header-simple.txt
-      before_body: table-of-contents.txt
 ---
 
 <link href="/rmarkdown-libs/anchor-sections/anchor-sections.css" rel="stylesheet" />
@@ -110,17 +105,20 @@ So far, each parameter has a iterative closed-form solution.</p>
 <div id="convergence-check" class="section level2">
 <h2>Convergence check</h2>
 <p>Since EM algorithm is a subclass of MM algorithm, by the principle of MM algorithm we can check the convergence by the fact that
-<span class="math display">\[Q(\theta; \theta^{(t)})\leq L(\theta) ~~ for all~~ \theta\]</span>
+<span class="math display">\[g(\theta; \theta^{(t)})\leq L(\theta) ~~ for all~~ \theta\]</span>
 and
-<span class="math display">\[Q(\theta; \theta^{(t)})= L(\theta) ~if~~and ~only~if~ \theta=  \theta^{(t)}.\]</span>
-Thus, we have
-<span class="math display">\[L(\theta^{(t)})=Q(\theta^{(t)}; \theta^{(t)})\leq Q(\theta^{(t+1)}; \theta^{(t)})\leq L(\theta^{(t+1)}). \tag{2.4.1}\]</span>
+<span class="math display">\[g(\theta; \theta^{(t)})= L(\theta) ~if~~and ~only~if~ \theta=  \theta^{(t)}.\]</span></p>
+<pre class="rmd"><code>Note: g-function is not the Q-function!!! 
+  There are some relation between them.</code></pre>
+<p>Thus, we have
+<span class="math display">\[L(\theta^{(t)})=g(\theta^{(t)}; \theta^{(t)})\leq g(\theta^{(t+1)}; \theta^{(t)})\leq L(\theta^{(t+1)}). \tag{2.4.1}\]</span>
 Recursively, we have
-<span class="math display">\[Q(\theta^{(t+1)}; \theta^{(t)}) \leq Q(\theta^{(t+2)}; \theta^{(t+1)}). \tag{2.4.2}\]</span>
+<span class="math display">\[g(\theta^{(t+1)}; \theta^{(t)}) \leq g(\theta^{(t+2)}; \theta^{(t+1)}). \tag{2.4.2}\]</span>
 Thus, there are two methods to check the convergence (correction of programming) of algorithm from the aspect of the objective function.</p>
 <ol style="list-style-type: decimal">
 <li><p>By <span class="math inline">\((2.4.1)\)</span>, we can check whether the value of the observed loglikelihood function is nondecreasing.</p></li>
-<li><p>By <span class="math inline">\((2.4.2)\)</span>, we can check whether the value of the Q-function is nondecreasing.</p></li>
+<li><p>By <span class="math inline">\((2.4.2)\)</span>, we can check whether the value of the g-function is nondecreasing.</p></li>
+<li><p>Check <span class="math inline">\(dQ=Q(\theta^{t+1};\theta^{(t)})- Q(\theta^{t};\theta^{(t)})\)</span> whether approach 0.</p></li>
 </ol>
 </div>
 </div>
@@ -178,6 +176,27 @@ Thus, we get
 The minorization function
 <span class="math display">\[g(\theta; \theta^{(t)})= E_{z|x;\theta^{(t)}}\ln f(x,z;\theta) + C(\theta^{(t)}),\]</span>
 where <span class="math inline">\(C(\theta^{(t)})\)</span> is a constant independent of <span class="math inline">\(\theta\)</span>. Thus, we only require to maximize the posterior expectation of <span class="math inline">\(z\)</span> on full-data loglikelihood, and EM algorithm is a special case of MM algorithm.</p>
+<div id="alternative-drivation-of-mm-algorithm" class="section level2">
+<h2>Alternative drivation of MM algorithm</h2>
+<p>Actually, Q function is increased in iteration, which refers to
+<span class="math display">\[Q(\theta^{(t+1)};\theta^{(t)}) \geq Q(\theta^{(t)}; \theta^{(t)}),\]</span>
+rather than
+<span class="math display">\[Q(\theta^{(t+2)};\theta^{(t+1)}) \geq Q(\theta^{(t+1)}; \theta^{(t)}),\]</span>
+which is false.</p>
+<p>We know observed loglikelihood
+<span class="math display">\[\log P(Y;\theta)= \log P(Y,Z;\theta) - \log P(Z|Y;\theta),\]</span>
+so take expectation of <span class="math inline">\(Z\)</span> conditional on <span class="math inline">\(Y\)</span> given <span class="math inline">\(\theta^{(t)}\)</span>,
+<span class="math display">\[\log P(Y;\theta) = Q(\theta;\theta^{(t)}) - H(\theta;\theta^{(t)}),\]</span>
+where <span class="math inline">\(H(\theta;\theta^{(t)})= \int P(Z|Y;\theta^{(t)})\log P(Z|Y;\theta)\)</span>.
+Thus,
+<span class="math display">\[\log P(Y;\theta) - \log P(Y;\theta^{(t)}) =\{Q(\theta;\theta^{(t)})-Q(\theta^{(t)};\theta^{(t)})\} + \Delta H(\theta;\theta^{(t)}),\]</span>
+where <span class="math inline">\(\Delta H(\theta;\theta^{(t)})=-H(\theta;\theta^{(t)}) + H(\theta^{(t)};\theta^{(t)})\)</span>, which is the KL-divergence of <span class="math inline">\(P(Z|Y;\theta)\)</span> and <span class="math inline">\(P(Z|Y;\theta^{(t)})\)</span> and non-negative, equal zero if and only if <span class="math inline">\(\theta=\theta^{(t)}\)</span>.</p>
+<p>Therefore,
+<span class="math display">\[\log P(Y;\theta) \geq \log P(Y;\theta^{(t)}) +\{Q(\theta;\theta^{(t)})-Q(\theta^{(t)};\theta^{(t)})\}\]</span>
+Let <span class="math inline">\(g(\theta; \theta^{(t)})=\log P(Y;\theta^{(t)}) +\{Q(\theta;\theta^{(t)})-Q(\theta^{(t)};\theta^{(t)})\}\)</span>, which is the minorization function of <span class="math inline">\(l_{obs}(\theta)=\log P(Y;\theta)\)</span>.</p>
+<p>By MM principle, we have
+<span class="math display">\[l_{obs}(\theta^{(t+1)})\geq g(\theta^{(t+1)}; \theta^{(t)})\geq g(\theta^{(t)}; \theta^{(t)})=l_{obs}(\theta^{(t)}).\]</span></p>
+</div>
 </div>
 <div id="ecm-algorithm" class="section level1">
 <h1>ECM algorithm</h1>
